# download-gha-logs-rs

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
.github/workflows/: release.yml  test.yml
Docker/builder/: build-binary.sh
src/: args.rs  log.rs  main.rs
