[workspace]
resolver = "2"
members = []

[package]
name = "download-gha-logs"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Herrington <andrew.the.techie@gmail.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"

# https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
tokio-console = ["console-subscriber", "tokio/tracing"]

[dependencies]
anyhow = "~1.0"
clap = { version = "~3.2", features = ["derive"] }
tracing-subscriber = { version = "~0.3" }
tracing = "~0.1"

tracing-futures = "~0.2"
tokio = { version = "~1.20", features = ["full"] }
console-subscriber = { version = "~0.1", optional = true }

[dev-dependencies]
tokio = { version = "~1.20", features = ["test-util", "macros"] }
tokio-test = "~0.4"
