[workspace]
resolver = "2"
members = []

[package]
name = "download-gha-logs"
description = "Download the logs of a Github Actions Run to a local file"
version = "1.0.1"
edition = "2021"
authors = ["Andrew Herrington <andrew@💻.kz>"]
readme = "README.md"
license = "MIT"

# https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
tokio-console = ["console-subscriber", "tokio/tracing"]

[dependencies]
anyhow = "~1.0"
bytes = "~1.1"
clap = { version = "~3.2", features = ["derive"] }
console-subscriber = { version = "~0.1", optional = true }
futures = "^0.3"
octocrab = { version = "^0.17.0", default-features = false, features = [
  "rustls",
] }
tokio = { version = "1.24.1", features = ["full"] }
tracing = "~0.1"
tracing-futures = "~0.2"
tracing-subscriber = { version = "~0.3" }
zip = { version = "0.6.3", default-features = true }

[dev-dependencies]
tokio = { version = "1.24.1", features = ["test-util", "macros"] }
tokio-test = "~0.4"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
panic = "abort"
lto = true
codegen-units = 1
